--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>A001陳擎文作業2</title>
 <meta name = "description" content="這是A0001陳擎文的作業2，這個網站在練習各種CSS範例">
 <meta name = "keywords" content="陳擎文，A0001，作業2，CSS，TDK">
+<meta name="google-site-verification" content="YDcR_s8IgWYX1GaBCNHqjp996vZYpguBsXUp_sOe_Po" />
+
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css' />
